shows + ui + navbar js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <navbar id="navbar" class="app-navbar no-search filter">
+    <nav id="navbar" class="app-navbar no-search filter">
       <div class="navbar-logo">
         <a href="/">TVMAZE</a>
       </div>
@@ -38,7 +38,7 @@
           <i id="navbar-close" class="fas fa-times"></i>
         </div>
       </div>
-    </navbar>
+    </nav>
     <!-- navbar-end -->
     <!-- main–section -->
     <main>
