--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main></main>
     <!-- main-section end -->
     <!-- loader -->
-    <div id="loader" class="loader-container">
+    <div id="loader" class="loader-container hide">
       <div class="lds-roller">
         <div></div>
         <div></div>
@@ -59,6 +59,5 @@
     </div>
     <!-- Loader end -->
     <script type="module" src="/src/js/routes.js"></script>
-    <script type="module" src="/src/js/navbar.js"></script>
   </body>
 </html>
