--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
     <!-- main–section -->
     <main></main>
     <!-- main-section end -->
+    <!-- comment-form -->
+    <section id="detailSection" class="detail-section">
+      <div id="detail" class="detail-content"></div>
+      <div class="quotes-list">
+        <h2>Quotes</h2>
+        <div id="quoteList"></div>
+      </div>
+      <form id="quote-form" class="quote-form" novalidate>
+        <div class="quote-input">
+          <label for="quote">Quote of this show</label>
+          <input id="quote" placeholder="Add your quote" class="input primary" type="text" />
+        </div>
+        <button type="submit" class="button primary">Add quote</button>
+      </form>
+    </section>
+    <!-- comment-form end -->
     <!-- loader -->
     <div id="loader" class="loader-container hide">
       <div class="lds-roller">
