--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="/src/css/styles.css" />
     <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
   </head>
   <body>
     <!-- navbar -->
@@ -54,7 +55,13 @@
       <form id="quote-form" class="quote-form" novalidate>
         <div class="quote-input">
           <label for="quote">Quote of this show</label>
-          <input id="quote" placeholder="Add your quote" class="input primary" type="text" />
+          <input
+            required
+            id="quote"
+            placeholder="Add your quote"
+            class="input primary"
+            type="text"
+          />
         </div>
         <button type="submit" class="button primary">Add quote</button>
       </form>
